# mc_router

./: .gitignore  Cargo.toml  flake.nix
mcproto/: Cargo.toml
mcproto/src/: lib.rs  read_ext.rs  write_ext.rs
mcproto/src/packet/: builder.rs  handshaking.rs  login.rs  mod.rs  status.rs
packet_derive/src/: lib.rs
src/: cli.rs  logger.rs  main.rs  mc_types.rs  read_types.rs  util.rs
src/client/: error.rs  legacy.rs  mod.rs  multi_version.rs  net.rs  version_impls.rs
src/config/: error.rs  hostname.rs  mod.rs  serveraddr.rs
src/minecraft/: read_ext.rs  write_ext.rs
src/minecraft/packet/: builder.rs  handshake.rs  mod.rs
