[package]
name = "mc_router"
version = "0.1.0"
authors = ["Griffin T <a12345678910ster@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4"
serde = {version = "1.0", features = ["derive"]}
rustbreak = {version = "2", features = ["ron_enc"]}

log = "0.4"
chrono = "0.4"
fern = { version = "0.6.0", default-features = false, features = ["colored"] }