[package]
name = "mc_router"
version = "0.1.0"
authors = ["Griffin T <a12345678910ster@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mcproto = { git = "https://github.com/occanowey/mcproto", rev = "e14a0d9" }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
tracing-logfmt = "0.1"
chrono = "0.4"
git-version = "0.3"

lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
hostname-validator = "1.1"
color-eyre = "0.6"
type-map = "0.5.0"
